various fixes (banner, collapse, header, card)

--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -1,11 +1,12 @@
 @import '../../styles/variables.scss';
 
 .banner {
-    max-height: 222px;
-    max-width: 1240px;
+    display: flex;
+    height: 222px;
+    max-width: 1280px;
+    width: 100%;
     position: relative;
-    margin: 0 20px;
-
+    
     .banner__title, .banner__img {
         width: 100%;
         height: 100%; 
@@ -22,7 +23,6 @@
         font-size: 48px;
         font-weight: 700;
         text-align: left;
-        padding-left: 20px;
         text-shadow: -1px 1px rgba(0, 0, 0, 1), -1px 1px rgba(0, 0, 0, 1), 1px -1px rgba(0, 0, 0, 1), 1px -1px rgba(0, 0, 0, 1);
     }
 
@@ -31,12 +31,13 @@
         border: 1px solid $secondary-color;
         border-radius: 25px;
         filter : brightness(65%);
+        margin: 0 20px;
     }
 }
 
 @media (max-width: 768px) {
     .banner {
-        max-height: 111px;
+        height: 111px;
 
         .banner__title {
             font-size: 24px;
