--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -16,7 +16,6 @@
         height: 100%;
         object-fit: cover;
         border-radius: 10px;
-        background-color: $primary-color;
     }
 
     .home__card__title {
