--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -12,9 +12,14 @@
     color: $tertiary-color;
     font-size: 24px;
     font-weight: 700;
-    padding: 10px;
+    line-height: 34px;
+    padding: 10px 15px;
     border-radius: 5px;
     transition: background 0.3s ease, color 0.3s ease;
+  }
+
+  .collapse__title i {
+    line-height: 0;
   }
   
   .collapse__title:hover,
@@ -51,3 +56,22 @@
     background-color: rgba(246, 246, 246, 0.45);
     transition: height 0.3s ease, opacity 0.3s ease, padding 0.3s ease;
   }
+
+  @media (max-width: 768px) {
+    .collapse__title {
+      font-size: 13px;
+      line-height: 12px;
+      padding: 10px;
+    }
+
+    .collapse__content {
+      visibility: hidden;
+      height: 0;
+      opacity: 0;
+      overflow: hidden;
+      padding: 0 1rem;
+      transition: height 0.3s ease, opacity 0.3s ease, padding 0.3s ease;
+      font-size: 12px;
+      line-height: 17px;
+    }
+}
